src/objects/gdf_Local__c.object
<CustomObject>
    <description>Object for Local DGF entity</description>
    <fields>
        <fullName>gdf_Customer__c</fullName>
        <description>foreign key to Contact</description>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locals</relationshipLabel>
        <relationshipName>gdf_Locals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gdf_Heating_Energy__c</fullName>
        <description>Intended for the source data column &quot;heating energy&quot;</description>
        <label>Heating Energy</label>
        <picklist>
            <picklistValues>
                <fullName>geothermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>heating oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Heating_Mode__c</fullName>
        <description>intended for the source data column heating_mode</description>
        <label>Heating Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Collective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Hot_Water_Energy__c</fullName>
        <description>Intended for the source data column &quot;energy hot water&quot;</description>
        <label>Hot Water Energy</label>
        <picklist>
            <picklistValues>
                <fullName>geothermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>heating oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Housing_Type__c</fullName>
        <description>intended for source data column &quot;housing type&quot;</description>
        <label>Housing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Collective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Number_Housed__c</fullName>
        <description>intended for source data column &quot;Number_People_Household&quot;</description>
        <label>Number Housed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gdf_Occupation_Type__c</fullName>
        <description>Intended for the source data column &quot;occupation type&quot;</description>
        <label>Occupation Type</label>
        <picklist>
            <picklistValues>
                <fullName>house owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Property_Type__c</fullName>
        <description>intended for the source data column property_type</description>
        <label>Property Type</label>
        <picklist>
            <picklistValues>
                <fullName>private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_Residence_Type__c</fullName>
        <description>Intended for the source data column &quot;residence_type&quot;</description>
        <label>Residence Type</label>
        <picklist>
            <picklistValues>
                <fullName>main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gdf_local_id__c</fullName>
        <description>external identifier for local record</description>
        <externalId>true</externalId>
        <label>local_id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Local</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L{000000}</displayFormat>
        <label>Local Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>